# SFML_CMAKE

./: CMakeLists.txt  assemble.bat  rr.lnk  run.bat
inc/: Button.h  Consts.h  Image.h  Screen.h  Text.h
src/: Image.cpp  Screen.cpp  Text.cpp  main.cpp
